# anolisa

.github/ISSUE_TEMPLATE/: bug_report.yml
scripts/: build-all.sh
src/agent-sec-core/: Makefile
src/agent-sec-core/agent-sec-cli/: pyproject.toml
src/agentsight/scripts/: int-test-token-collector.sh
src/agentsight/src/: config.rs  unified.rs
src/anolisa/: AGENTS.md  CHANGELOG.md  Cargo.toml
src/anolisa/crates/anolisa-cli/: Cargo.toml
src/anolisa/crates/anolisa-cli/src/: commands.rs  main.rs
src/anolisa/crates/anolisa-cli/src/commands/: adapter.rs  common.rs  mod.rs  osbase.rs  register.rs  runtime.rs  self_.rs  subscription.rs  tier1.rs
src/anolisa/crates/anolisa-cli/src/commands/tier1/: bug.rs  disable.rs  doctor.rs  enable.rs  env.rs  info.rs  list.rs  logs.rs  mod.rs  restart.rs  status.rs  update.rs
src/anolisa/crates/anolisa-core/: Cargo.toml
src/anolisa/crates/anolisa-core/src/: adapter.rs  capability.rs  component.rs  contract_lint.rs  dependency.rs  enable_execute.rs  enable_plan.rs  feature_flags.rs  health.rs  install_runner.rs  lib.rs  manifest.rs  registry.rs  state.rs  subscription.rs  transaction.rs
src/anolisa/crates/anolisa-core/src/health/: engine.rs  spec.rs
src/anolisa/crates/anolisa-core/src/registry/: cache.rs  client.rs  config.rs  error.rs
src/anolisa/crates/anolisa-core/tests/: capability_manifest.rs
src/anolisa/docs/: BUILD.md  BUILD_cn.md
src/anolisa/scripts/: install-anolisa.sh
src/copilot-shell/scripts/: unused-keys-only-in-locales.json
src/tokenless/: Cargo.toml  justfile  tokenless.spec.in
(+99 files in other folders)
